@@ -1,3 +1,11 @@
+2020-03-29  Frank Ch. Eigler  <fche@redhat.com>
+
+	* debuginfod-client.c (struct debuginfod_client): Add a flag field
+	for progressfn printing.
+	(default_progressfn): Set it if printing \rsomething.
+	(debuginfod_end): Terminate with \n if flag set, i.e., only if the
+	default_progressfn was actually called.
+
 2020-03-27  Mark Wielaard  <mark@klomp.org>
 
 	* debuginfod.cxx (parse_opt): Check port is not zero.
